notes/lp-gpus: Found another workstation card

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -451,7 +451,15 @@ They tend to offer a much worse price-to-performance ratio compared to cards mea
 <td style="text-align: left">Workstation card.</td>
 </tr>
 <tr>
-<td style="text-align: left"><span class="blink"><strong>Nvidia GeForce RTX 3050 6GB</strong></span></td>
+<td style="text-align: left">AMD Radeon PRO W6400</td>
+<td style="text-align: center">2022</td>
+<td style="text-align: right">4GB<br/><sup>GDDR6</sup></td>
+<td style="text-align: right">50W</td>
+<td style="text-align: center">7969</td>
+<td style="text-align: left">Workstation card.</td>
+</tr>
+<tr>
+<td style="text-align: left"><span class="blink" style="color: #F79EC6;"><strong>Nvidia GeForce RTX 3050 6GB</strong></span></td>
 <td style="text-align: center">2024</td>
 <td style="text-align: right">6GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">75W</td>
