notes/lp-gpus: subtitles on images

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -39,7 +39,8 @@
 <!-- updated 2025/4/24 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
 <p>Last updated 🌔 Thu, Apr 24th, 2025.</p>
-<p><img src="assets/low_profile_gpu.jpg" alt="img" /></p>
+<p><img src="assets/low_profile_gpu.jpg" alt="img" />
+<span class="aside">We are now seeing year to year LP card uplifts after many years of stagnation and segment drought, it’s an exciting time!</span></p>
 <p>Most GPU marketing materials will use the term <strong>LP</strong> or <strong>“low profile”</strong> to refer to graphics cards that are <strong>69mm</strong>, or half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
 As far as discrete graphics go, these are the most space and energy-efficient GPUs available today, ideal for use in space-saving PCs, small form factor PCs (SFFs), home theater PCs (HTPCs), slimline cases, specialty server hardware, converting a used office PC into a budget game console, and other niche applications where size and power draw are constraining factors.
 Low profile PCIe cards with power draw requirements below 75W can be powered from the PCIe slot alone and do not require additional PSU power connectors.</p>
@@ -72,7 +73,8 @@ Some common or long-running cards will have had changes to VRAM configuration ov
 <hr/>
 <hr/>
 <h2>Notes on upgrading an existing prebuilt desktop PC<span id="Notes-on-upgrading-an-existing-prebuilt-desktop-PC"></span></h2>
-<p><img src="assets/optiplex-9020-sff3.jpg" alt="img" /></p>
+<p><img src="assets/optiplex-9020-sff3.jpg" alt="img" />
+<span class="aside">Dell Optiplex 9020 SFF (2014), i7-4790, RTX 4060 LP, 500W flex ATX, 32GB DDR3-1600, 1.1TB fast/14TB slow, mikuu, DVD±RW, etc..</span></p>
 <p>Some people might find it appealing to drop in a 75W GPU into an existing prebuilt desktop PC to make an entry-level gaming PC, as these often have proprietary power supplies with no additional PCIe cables for expansion cards.</p>
 <h3>Voltage throttling<span id="Voltage-throttling"></span></h3>
 <p>If you do decide to go this route, be aware of the limitations of pre-built OEM motherboards, their BIOS settings often inhibit or prevent customization such as undervolting, fan curve editing, and can often throw startup errors when swapping out OEM equipment such as case fans.</p>
@@ -89,7 +91,8 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 2.0 4x P
 <p>AMD’s low profile cards have substantially worse price/performance than Nvidia options, the RX 6400 for example, is comparable to a GTX 1050ti in performance yet lacks a hardware video encoder for streaming or video encoding, for the time being, please don’t pick AMD for low profile builds trying to chase FOSS zealotry.</p>
 <h3>Space constraints<span id="Space-constraints"></span></h3>
 <p><img src="assets/gigabyte-rtx-4060-length.jpg" alt="img" />
-You should also be mindful of available space in your SFF case, low profile RTX 4060s (and possibly later cards) are much longer than the standard low profile length of <strong>167mm</strong>.</p>
+<span class="aside">I always forget what order to remove components, the GPU has to come out before I can disconnect the drive cage.</span></p>
+<p>You should also be mindful of available space in your SFF case, low profile RTX 4060s (and possibly later cards) are much longer than the standard low profile length of <strong>167mm</strong>.</p>
 <p>Both the Gigabyte and GALAX low profile versions of the RTX 4060 are <strong>182mm</strong> at their longest point, the Gigabyte version has a <strong>182mm</strong> fan shroud with a 167mm PCB behind it, allowing for a recessed PCIe plug.
 ASUS’s version has a much longer <strong>188mm</strong> fan shroud and PCB that would very likely not fit in the application above without mods, measure twice and click buy only once!</p>
 <h2>A dying breed of graphics card?<span id="A-dying-breed-of-graphics-card"></span></h2>
