[microsounds@shami] 2 changes 2025/4/27 10:11pm PDT

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -168,7 +168,7 @@ var figs = [
 	[ '287708', 'e0015', 'good smile gochiusa kafu chino nendo #558 (2017)' ],
 	[ '1876376', 'e225c', 'good smile cinnamoroll miku nendo #2306 (2024)' ],
 	[ '861021', '9c203', 'sega preciality special nuigurumi (fuwafuwa mega jumbo) miku plush (2019)' ],
-	[ 'p1781933', '9713d', 'design coco miku senbonzakura 10th anniv. ver 1/7 scale (2025)' ],
+	[ 'p1781933', '408d1', 'design coco miku senbonzakura 10th anniv. ver 1/7 scale (2025)' ],
 	[ '1974911', 'db59b', 'furyu bicute bunnies miku rurudo ver. (2024)' ],
 	[ '2004539', '9c609', 'taito miku x rody artist masterpiece+ 39 ver. (2024)' ],
 	[ 'p236103', '74cf9', 'freeing b-style hatsune miku V3 1/4 scale (2016)' ],
@@ -197,7 +197,7 @@ var figs = [
 	[ '1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
 	[ '1258843', '55d3c', 'furyu f-nex hatsune miku chronicle 1/7 scale (2022)' ],
 	[ '926772', '68615', 'good smile racing miku 2020 nendoroid #1293 (2020)' ],
-	[ '1711391', '32d0d', 'taito kuji miku 39 no hi kinen kuji B prize (2023)' ],
+	[ '1711391', '30e13', 'taito kuji miku 39 no hi kinen kuji B prize (2023)' ],
 	[ '998275', 'e47b6', 'taito miku 3rd season autumn ver. (2020)' ],
 	[ '144335', '72a4a', 'max factory figma miku 2.0 #200 (2013)' ],
 	[ '604387', '623bc', 'good smile miku 10th anniv. ver. nendoroid #831 (2018)' ],
