--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2025/5/20 -->
+<!-- updated 2025/5/24 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌓 Tue, May 20th, 2025.</p>
+<p>Last updated 🌔 Sat, May 24th, 2025.</p>
 <p><img src="assets/low_profile_gpu.jpg" alt="img" />
 <span class="aside">We are now seeing year to year LP card uplifts after many years of stagnation and segment drought, it’s an exciting time!</span></p>
 <p>Most GPU marketing materials will use the term <strong>LP</strong> or <strong>“low profile”</strong> to refer to graphics cards that are <strong>69mm</strong>, or half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
@@ -694,8 +694,8 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: center">2025</td>
 <td style="text-align: right">8GB<br/><sup>GDDR7</sup></td>
 <td style="text-align: right">145W</td>
-<td style="text-align: center">26345</td>
-<td style="text-align: left"><strong>PCIe 8-pin</strong>, equal perf/W as RTX 4060.</td>
+<td style="text-align: center">23050</td>
+<td style="text-align: left"><strong>PCIe 8-pin</strong>, roughly equal perf/W as RTX 4060.</td>
 </tr>
 </tbody>
 </table>
