notes/figures: refreshed figure information

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,15 +36,17 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2025/1/15 -->
+<!-- updated 2025/6/2 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌑 Wed, Jan 15th, 2025</p>
+<p>Last updated 🌖 Mon, Jun 2nd, 2025</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
 All the while, a <a href="https://www.google.com/finance/quote/USD-JPY?window=5Y">historically cheap yen</a> has me importing<sup class="footnote-ref"><a href="#fn-import" id="fnref-import" data-footnote-ref="data-footnote-ref">1</a></sup> far more often than I used to.</p>
 <p>I don’t feel like making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to keep track of my collection, so this page piggybacks off their API, links will take you to their catalog entry on <em>mfc</em><sup class="footnote-ref"><a href="#fn-api" id="fnref-api" data-footnote-ref="data-footnote-ref">2</a></sup>.</p>
 <h2>Collection<span id="Collection"></span></h2>
+<p><sup class="aside right">(Maybe one day I’ll find every Gochiusa nendo.)</sup>
+You can probably pick up on the theme, my collection is mostly miku, then enmaided characters, but I really enjoy collecting artifacts from the first golden age of Vocaloid music <em>(2009-2016)</em>.<sup class="footnote-ref"><a href="#fn-criteria" id="fnref-criteria" data-footnote-ref="data-footnote-ref">3</a></sup></p>
 <p><em><strong><span id="fig-count" style="font-size: 150%"></span></strong> entries,
 <strong><span id="fig-abs-count" style="font-size: 120%"></span></strong> of which are abstract.</em>
 <em>Sorted by when I remember getting it, from newest to oldest.</em>
@@ -111,8 +113,8 @@ Amazon makes it easier to spot fakes, they will all have incomprehensible word s
 <li>box artwork that <a href="https://myfigurecollection.net/picture/2402764">omits manufacturer logos and brand names</a></li>
 <li>faces that just look “off”, pad printed eyes that have a <a href="https://myfigurecollection.net/picture/2182516">bizarre skew</a></li>
 <li>individual parts that won’t fit together correctly or won’t stay snug</li>
-<li>designs standing on one leg that cannot hold their own weight and bend at a steep angle<sup class="footnote-ref"><a href="#fn-fotsjapan" id="fnref-fotsjapan" data-footnote-ref="data-footnote-ref">3</a></sup></li>
-<li>designs that <a href="https://myfigurecollection.net/picture/3267308">don’t actually exist</a>, combinations of 2 or more characters at the same time<sup class="footnote-ref"><a href="#fn-rem" id="fnref-rem" data-footnote-ref="data-footnote-ref">4</a></sup></li>
+<li>designs standing on one leg that cannot hold their own weight and bend at a steep angle<sup class="footnote-ref"><a href="#fn-fotsjapan" id="fnref-fotsjapan" data-footnote-ref="data-footnote-ref">4</a></sup></li>
+<li>designs that <a href="https://myfigurecollection.net/picture/3267308">don’t actually exist</a>, combinations of 2 or more characters at the same time<sup class="footnote-ref"><a href="#fn-rem" id="fnref-rem" data-footnote-ref="data-footnote-ref">5</a></sup></li>
 <li>paint fading quickly even in interior lights from store displays</li>
 <li>visible molding seams <em>(flash)</em>, ABS plastics yellowing, PVC vinyls leaking plasticizer and turning sticky</li>
 <li>visible seams and outright separation of parts between thigh-highs, bare skin, shoes, detached sleeves, etc.</li>
@@ -153,15 +155,15 @@ var figs = [
 	[ '2247777', '10a51', 'sega luminasta miku project diva mega 39\'s 15th anniv. (2024)' ],
 	[ '22229', '658b2', 'sega hatsune miku PM figure (2010)' ],
 	[ '555317', 'e5cf0', 'taito miku x shuumai-kun plush (2012)' ],
-	[ 'p625061', '9ccb6', 'sega dodeka jumbo fuwa fuwa nuigurumi BIG MICKER!! (2018)' ],
+	[ '625061', '9ccb6', 'sega dodeka jumbo fuwa fuwa nuigurumi BIG MICKER!! (2018)' ],
 	[ '1916908', 'fbd46', 'sega fuwa puchi nuigurumi L miku magical mirai 2023 plush (2023)' ],
 	[ '1877039', '26931', 'good smile dress up darling kuroe shikuzu nendoroid #2172 (2023)' ],
 	[ '12638', '7c73a', 'gift nendoroid plus #02 hachune miku articulated plush  (2011)' ],
 	[ '549357', 'f1872', 'good smile gochiusa hotto cocoa nendoroid #798 (2017)' ],
 	[ '1131770', 'e27f8', 'good smile rozen maiden suiseiseki nendoroid #1710 (2022)' ],
-	[ 'p2222288', '8c13c', 'taito artist masterpiece+ miku birthday 2024 flower ver. (2024)' ],
-	[ 'p2256547', 'c9e2e', 'good smile pop up parade miku v2 translucent color ver. (2024)' ],
-	[ 'p1941522', 'd96e1', 'max factory plamatea miku 16th birthday ver. model kit (2024)' ],
+	[ '2222288', '8c13c', 'taito artist masterpiece+ miku birthday 2024 flower ver. (2024)' ],
+	[ '2256547', 'c9e2e', 'good smile pop up parade miku v2 translucent color ver. (2024)' ],
+	[ '1941522', 'd96e1', 'max factory plamatea miku 16th birthday ver. model kit (2024)' ],
 	[ '2210315', '79581', 'good smile world is mine miku 2024 ver. nendoroid #2430 (2024)' ],
 	[ '1764164', 'be850', 'good smile huggy miku trading fig (2023)' ],
 	[ '1956669', '6491b', 'good smile miku v3 nendoroid #2360 (2024)' ],
@@ -170,8 +172,8 @@ var figs = [
 	[ '861021', '9c203', 'sega preciality special nuigurumi (fuwafuwa mega jumbo) miku plush (2019)' ],
 	[ 'p1781933', '408d1', 'design coco miku senbonzakura 10th anniv. ver 1/7 scale (2025)' ],
 	[ '1974911', 'db59b', 'furyu bicute bunnies miku rurudo ver. (2024)' ],
-	[ '2004539', '405cf', 'taito miku x rody artist masterpiece+ 39 ver. (2024)' ],
-	[ 'p236103', '74cf9', 'freeing b-style hatsune miku V3 1/4 scale (2016)' ],
+	[ '2004539', '5ff5e', 'taito miku x rody artist masterpiece+ 39 ver. (2024)' ],
+	[ '236103', '74cf9', 'freeing b-style hatsune miku V3 1/4 scale (2016)' ],
 	[ '1911915', 'e3093', 'good smile komi-san maid outfit pop up parade (2024)' ],
 	[ '1941969', '7b67e', 'good smile DECO*27 vampire jirai miku nendoroid #2239 (2024)' ],
 	[ '186', '94494', 'good smile miku nendoroid #033 (2008)' ],
@@ -192,7 +194,7 @@ var figs = [
 	[ '287701', 'bb9fe', 'good smile mitchie m the greatest idol miku 1/8 scale (2016)' ],
 	[ '41459', '30b7f', 'good smile miku absolute HMO edition nendoroid #129 (2011)' ],
 	[ '861021', '9c203', 'sega preciality special nuigurumi (fuwafuwa mega jumbo) miku plush (2019)' ],
-	[ '1849001', '76bfb', 'gift hatsune miku nt fumo plush (2023)' ],
+	[ '1849001', '49404', 'gift hatsune miku nt fumo plush (2023)' ],
 	[ '1876348', 'f08ca', 'good smile miku 16th birthday ~dear creators~ nendoroid #2222 (2023)' ],
 	[ '1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
 	[ '1258843', '55d3c', 'furyu f-nex hatsune miku chronicle 1/7 scale (2022)' ],
@@ -239,7 +241,7 @@ var figs = [
 	[ '1376115', '30a86', 'good smile racing AMG 2021 SUPER GT round 3 1/64 scale diecast car (2022)' ],
 	[ '1275355', '94c12', 'sega preciality special nuigurumi sakura miku (2022)' ],
 	[ '1213389', '85cfa', 'good smile genshin impact venti nendoroid #1795 (2022)' ],
-	[ '1189088', 'f9b14', 'good smile hatsune miku nt nendoroid #1701 (2022)' ],
+	[ '1189088', 'a069e', 'good smile hatsune miku nt nendoroid #1701 (2022)' ],
 	[ '1662862', 'a6288', 'moeyu miku embroidered blanket hoodie (2022)' ],
 	[ '1499800', '04668', 'taito miku artist masterpiece latidos 2022 ver. (2022)' ],
 	[ '1220581', 'b0f34', 'taito miku artist masterpiece pricess arabian ver. (2021)' ],
@@ -253,7 +255,7 @@ var figs = [
 	[ '401018', 'bfb66', 'sega project diva innocent SPM miku (2016)' ],
 	[ '718192', '29017', 'hatsune miku 2nd season Winter ver. (2018)' ],
 	[ '1251026', 'e36e0', 'bandai q posket miku type a (2021)' ],
-	[ '944728', 'c98b0', 'furyu miku bicute bunnies original ver. (2020)' ],
+	[ '944728', 'f3f21', 'furyu miku bicute bunnies original ver. (2020)' ],
 	[ '1311067', 'f43ff', 'taito miku artist masterpiece princess alice (2022)' ],
 	[ '1141381', 'fe94b', 'taito miku artist masterpiece birthday 2021 (14th anniv.) (2021)' ],
 	[ '1293291', 'c95e9', 'furyu sakura miku noodle stopper (2022)' ],
@@ -368,13 +370,17 @@ Most, if not all air shipping options from Japan start at ¥4,000, single item s
 <li id="fn-api">
 <p>Note: mfc likes to <a href="https://github.com/microsounds/microsounds.github.io/commit/10c49ea">change their API endpoints</a> a lot, if images are broken, it’s not for <a href="https://raw.githubusercontent.com/microsounds/microsounds.github.io/master/.scripts/fetch-figure-pics.sh">a lack of trying</a>. <a href="#fnref-api" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="2" aria-label="Back to reference 2">↩</a></p>
 </li>
+<li id="fn-criteria">
+<p>I’m sure there’s multiple thousands of <em>Miku-adjacent</em> figures by this point, figures only barely tangentially related to Miku, eg. bearing the character license and/or “likeness”, yet not related to canon illustrations, collaboration projects, Project DIVA modules, any concert series, PVs or any existing musical works aren’t very interesting and I don’t really go for those very often.</p>
+<p>Classic outfit VOCALOID2 Miku is love! <a href="#fnref-criteria" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="3" aria-label="Back to reference 3">↩</a></p>
+</li>
 <li id="fn-fotsjapan">
 <p>Figures leaning on their own isn’t limited to bootlegs, FOTS Japan is infamous for their use of hollow legs that cannot support their own weight and slowly fall over, even while
-<a href="https://old.reddit.com/r/AnimeFigures/comments/if2feq/just_dont_buy_how_heavy_are_the_dumbbells_you/">standing on BOTH LEGS</a>. <a href="#fnref-fotsjapan" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="3" aria-label="Back to reference 3">↩</a></p>
+<a href="https://old.reddit.com/r/AnimeFigures/comments/if2feq/just_dont_buy_how_heavy_are_the_dumbbells_you/">standing on BOTH LEGS</a>. <a href="#fnref-fotsjapan" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="4" aria-label="Back to reference 4">↩</a></p>
 </li>
 <li id="fn-rem">
 <p>A wild new frontier in bootlegs, this is a combination of
-<a href="https://myfigurecollection.net/item/1047417">this Rem</a> and <a href="https://myfigurecollection.net/item/944728">this Miku</a>. <a href="#fnref-rem" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="4" aria-label="Back to reference 4">↩</a></p>
+<a href="https://myfigurecollection.net/item/1047417">this Rem</a> and <a href="https://myfigurecollection.net/item/944728">this Miku</a>. <a href="#fnref-rem" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="5" aria-label="Back to reference 5">↩</a></p>
 </li>
 </ol>
 </section>
