notes/lp-gpus: 5060 is just as disappointing as I originally thought

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -686,7 +686,7 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: center">2023</td>
 <td style="text-align: right">8GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">115W</td>
-<td style="text-align: center">19444</td>
+<td style="text-align: center">19701</td>
 <td style="text-align: left">GTX 1080ti perf in an LP card, <strong>PCIe 6/8-pin power</strong>.</td>
 </tr>
 <tr>
@@ -694,8 +694,8 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: center">2025</td>
 <td style="text-align: right">8GB<br/><sup>GDDR7</sup></td>
 <td style="text-align: right">145W</td>
-<td style="text-align: center">23050</td>
-<td style="text-align: left"><strong>PCIe 8-pin</strong>, roughly equal perf/W as RTX 4060.</td>
+<td style="text-align: center">21294</td>
+<td style="text-align: left"><strong>PCIe 8-pin</strong>, 20% more power draw, 7% perf uplift over RTX 4060.</td>
 </tr>
 </tbody>
 </table>
