--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,7 @@ Anyone can create their own personal sandbox on the web and put as much or as li
 </ul>
 <h2>Other projects<span id="Other-projects"></span></h2>
 <ul>
-<li><em>(2024)</em> /s4scraft/ activity tracker, updates every 10 minutes — <a href="/misc/s4scraft.htm"><code>/misc/s4scraft.htm</code></a></li>
+<li><em>(2024)</em> /s4scraft/ activity tracker, <del>updates every 10 minutes</del> currently broken — <a href="/misc/s4scraft.htm"><code>/misc/s4scraft.htm</code></a></li>
 <li><em>(2016–2017)</em> <em><strong>[retired]</strong></em> lightweight futaba-like messageboard system in C — <a href="https://github.com/microsounds/akari-bbs"><code>microsounds/akari-bbs</code></a></li>
 <li><em>(2016)</em> CPU-based tripcode generator for futaba-like imageboards — <a href="https://github.com/microsounds/tripforce"><code>microsounds/tripforce</code></a></li>
 <li><em>(2016)</em> <em><strong>[retired]</strong></em> command-line utility for scraping Bandcamp albums — <a href="https://github.com/microsounds/bc-dl"><code>microsounds/bc-dl</code></a></li>
@@ -164,7 +164,7 @@ You should also know better than to paste <a href="http://thejh.net/misc/website
 <h2>Links<span id="Links"></span></h2>
 <!-- vocaloid webring widget -->
 <div class="left" style="margin: 6px;" id="vocaloid-webring">
-<table class="webring-container center" >
+<table class="broken webring-container center" >
 	<tr>
 		<td><img alt="miku and friends" src='https://adilene.net/webring/images/vocaloid.png' />
 			<div class="webring-info blink">VOCALOID WEBRING</div>
