reader noted email is unreadable, fixed

--- a/index.htm
+++ b/index.htm
@@ -156,7 +156,7 @@ You can also contact me by e-mail at the following address:</p>
 	<span style="opacity: 0; font-size: 0px;">kajskdjklasjkljakJZKLJLJJJJJLLLSLS:LLSLSLSLSLSLSLLSL ></span>
 	<span style="display: inline-block; animation: ellipse 4.1s ease -20s infinite alternate;">k</span>
 	<span style="display: inline-block; animation: ellipse 4.3s ease -20s infinite alternate;">.</span>
-	<span style="display: inline-block; animation: ellipse 4.5s ease -20s infinite alternate;">l</span>
+	<span style="display: inline-block; animation: ellipse 4.5s ease -20s infinite alternate;">L</span>
 	<span style="display: inline-block; animation: ellipse 4.7s ease -20s infinite alternate;">i</span>
 </div>
 <p><em>Please type it out manually, this address cannot be copy pasted.<br/>
