adeline vocaring disappeared, applied for a different one

--- a/index.htm
+++ b/index.htm
@@ -164,16 +164,10 @@ You should also know better than to paste <a href="http://thejh.net/misc/website
 <h2>Links<span id="Links"></span></h2>
 <!-- vocaloid webring widget -->
 <div class="left" style="margin: 6px;" id="vocaloid-webring">
-<table class="broken webring-container center" >
-	<tr>
-		<td><img alt="miku and friends" src='https://adilene.net/webring/images/vocaloid.png' />
-			<div class="webring-info blink">VOCALOID WEBRING</div>
-			<div class="webring-links">
-				[ <a href='https://webring.adilene.net/index.php' target='_parent'>Index</a> · <a href='https://webring.adilene.net/members.php' target='_parent'>Members</a> ]
-			</div>
-		</td>
-	</tr>
-</table>
+	<div id="vocaring" class="small webring-container center broken"></div>
+	<link rel="stylesheet" href="https://electric-tenshi.nekoweb.org/vocaring/vocaring.css" />
+	<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-variables.js"></script>
+	<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-widget.js"></script>
 </div>
 <div class="center">
 <p><a href="https://debian.org/distrib"><img src="/static/button/debian.png" alt="ico-debian" /></a>
