--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
 <noscript>
 	<p><em>You have JavaScript disabled, dynamic content and multimedia will not work.</em></p>
 </noscript>
-<video loop="loop" autoplay="autoplay" muted="muted" poster="/static/starry.jpg" >
+<video loop="loop" autoplay="autoplay" muted="muted" poster="/static/starry.jpg" alt="starry sky">
 	<source type="video/webm" src="/static/starry.webm" />
     <img src="/static/starry.jpg" />
 </video>
