--- a/index.htm
+++ b/index.htm
@@ -129,7 +129,8 @@ Currently <span id="discord-status"></span>.
 <br/>
 <span id="lastfm-status"></span>
 <span class="footer" style="color: #CCC;">I still hate you, <a href="https://last.fm">last.fm</a> 💔💔💔</span></p>
-<p>If it’s about a project or a page on this website, open an issue or a pull request on GitHub at one of the links above.</p>
+<p>If it’s about a project, open an issue or pull request on GitHub at one of the links above.<br/>
+Likewise, you can also <a href="https://github.com/microsounds/microsounds.github.io/issues">open issues</a> or make <a href="https://github.com/microsounds/microsounds.github.io/pulls">pull requests</a> on this website through it’s <a href="https://github.com/microsounds/microsounds.github.io">Git repo</a>.</p>
 <p><span class="blink" style="color: #FFFF00;"><em>New!</em></span> —
 You can also contact me by e-mail at the following address:</p>
 <div class="center obfuscated-email">
