added to vocaloid webring

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -102,7 +102,7 @@
 <li><em>His BBS is <a href="https://poopingpenis.bbs.fc2.com">still up</a>.</em></li>
 </ul>
 </li>
-<li><img src="/static/button/affiliates/xjunko.png" alt="ico" /> <a href="https://konno.ovh">xjunko’s site</a>
+<li><img src="/static/button/affiliates/xjunko.png" alt="ico" /> <a href="https://kafu.ovh">xjunko’s site</a>
 <ul>
 <li><em>inspired by my site 💕, a rhythm games enthusiast from Malaysia.</em></li>
 </ul>
