--- a/index.htm
+++ b/index.htm
@@ -165,7 +165,7 @@ You should also know better than to paste <a href="http://thejh.net/misc/website
 <h2>Links<span id="Links"></span></h2>
 <!-- vocaloid webring widget -->
 <div class="left" style="margin: 6px;" id="vocaloid-webring">
-	<div id="vocaring" class="small webring-container center"></div>
+	<div id="vocaring" class="small webring-container center" style="--scale-factor: 0.6;"></div>
 	<link rel="stylesheet" href="https://electric-tenshi.nekoweb.org/vocaring/vocaring.css" />
 	<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-variables.js"></script>
 	<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-widget.js"></script>
