--- a/index.htm
+++ b/index.htm
@@ -39,9 +39,9 @@
 <noscript>
 	<p><em>You have JavaScript disabled, dynamic content and multimedia will not work.</em></p>
 </noscript>
-<video loop="loop" autoplay="autoplay" muted="muted" poster="/static/starry.jpg" alt="starry sky">
+<video loop="loop" autoplay="autoplay" muted="muted" poster="/static/starry.jpg">
 	<source type="video/webm" src="/static/starry.webm" />
-    <img src="/static/starry.jpg" />
+    <img src="/static/starry.jpg" alt="starry night sky" />
 </video>
 <p><span class="aside right"><sup><em>Based on an original illustration — <a href="https://gelbooru.com/index.php?page=post&amp;s=view&amp;id=3757995">© 2015 tanakatam</a></em></sup></span></p>
 <h2>About me<span id="About-me"></span></h2>
@@ -187,7 +187,7 @@ You should also know better than to paste <a href="http://thejh.net/misc/website
 <a href="/static/button/badge.gif" title="animated version"><img src="/static/button/badge.gif" alt="ico-badge" /></a></p>
 <p><span class="aside">Best viewed at 380px or wider, feel free to use my meme badge on your own site.</span>
 <br/>
-<span class="aside">A member site of <a href="https://1mb.club#:~:text=microsounds.github.io">1MB Club</a>, written in <a href="https://github.com/microsounds/microsounds.github.io#-validation">polyglot HTML5</a>, reject JS frameworks and spit on all their advocates!</span></p>
+<span class="aside">A member site of <del>1MB</del> <a href="https://1mb.club#:~:text=microsounds.github.io">2MB Club</a> (lmao), written in <a href="https://github.com/microsounds/microsounds.github.io#-validation">polyglot XHTML5</a>, reject JS frameworks and spit on all their advocates!</span></p>
 </div>
 <!-- TODO: if this gets any bigger this should be it's own .js file -->
 <script type="text/javascript">
