links: wowana.me went offline

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -339,7 +339,7 @@
 <li><a href="https://allyratworld.neocities.org/home.html">allyratworld</a></li>
 <li><a href="https://neoratz.neocities.org/">neoratz</a></li>
 <li><a href="https://proxima64.org">proxima64</a></li>
-<li><a href="https://wowana.me">wowaname</a>
+<li><a href="https://web.archive.org/web/20240325093442/https://wowana.me">wowaname</a>
 <ul>
 <li><em>My original inspiration for creating this website, thank you 💕</em></li>
 </ul>
