--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2025/6/25 -->
+<!-- updated 2025/7/11 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌕 Wed, Jun 25th, 2025.</p>
+<p>Last updated 🌑 Fri, Jul 11th, 2025.</p>
 <p><img src="assets/low_profile_gpu.jpg" alt="img" />
 <span class="aside">We are now seeing year to year LP card uplifts after many years of stagnation and segment drought, it’s an exciting time!</span></p>
 <p>Most GPU marketing materials will use the term <strong>LP</strong> or <strong>“low profile”</strong> to refer to graphics cards that are <strong>69mm</strong>, or half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
@@ -485,6 +485,14 @@ They tend to offer a much worse price-to-performance ratio compared to cards mea
 <td style="text-align: center">10842</td>
 <td style="text-align: left">Workstation card.</td>
 </tr>
+<tr>
+<td style="text-align: left">Nvidia RTX 2000E Ada Generation</td>
+<td style="text-align: center">2024</td>
+<td style="text-align: right">16GB<br/><sup>GDDR6</sup></td>
+<td style="text-align: right">50W</td>
+<td style="text-align: center">14396</td>
+<td style="text-align: left">Workstation card.</td>
+</tr>
 </tbody>
 </table>
 <h1>2-slot Low Profile under 75W<span id="2-slot-Low-Profile-under-75W"></span></h1>
@@ -694,7 +702,7 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: center">2025</td>
 <td style="text-align: right">8GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">130W</td>
-<td style="text-align: center">12000?</td>
+<td style="text-align: center">17000?</td>
 <td style="text-align: left"><strong>PCIe 8-pin</strong>, 11% more power draw, negative perf/W over RTX 4060.</td>
 </tr>
 <tr>
