notes/figures: refreshed mfc filename keys

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -168,7 +168,7 @@ var figs = [
 	[ '2222288', '8c13c', 'taito artist masterpiece+ miku birthday 2024 flower ver. (2024)' ],
 	[ '2256547', 'c9e2e', 'good smile pop up parade miku v2 translucent color ver. (2024)' ],
 	[ '1941522', 'd96e1', 'max factory plamatea miku 16th birthday ver. model kit (2024)' ],
-	[ '2210315', '79581', 'good smile world is mine miku 2024 ver. nendoroid #2430 (2024)' ],
+	[ '2210315', '3921b', 'good smile world is mine miku 2024 ver. nendoroid #2430 (2024)' ],
 	[ '1764164', 'be850', 'good smile huggy miku trading fig (2023)' ],
 	[ '1956669', '6491b', 'good smile miku v3 nendoroid #2360 (2024)' ],
 	[ '287708', 'e0015', 'good smile gochiusa kafu chino nendo #558 (2017)' ],
