notes/lp-gpus: idk why rtx 5050 even exists

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2025/7/11 -->
+<!-- updated 2025/7/18 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌑 Fri, Jul 11th, 2025.</p>
+<p>Last updated 🌓 Fri, Jul 18th, 2025.</p>
 <p><img src="assets/low_profile_gpu.jpg" alt="img" />
 <span class="aside">We are now seeing year to year LP card uplifts after many years of stagnation and segment drought, it’s an exciting time!</span></p>
 <p>Most GPU marketing materials will use the term <strong>LP</strong> or <strong>“low profile”</strong> to refer to graphics cards that are <strong>69mm</strong>, or half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
@@ -694,7 +694,7 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: center">2025</td>
 <td style="text-align: right">8GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">130W</td>
-<td style="text-align: center">17000?</td>
+<td style="text-align: center">16763</td>
 <td style="text-align: left"><strong>PCIe 8-pin</strong>, 11% more power draw, negative perf/W over RTX 4060.</td>
 </tr>
 <tr>
@@ -702,7 +702,7 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: center">2023</td>
 <td style="text-align: right">8GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">115W</td>
-<td style="text-align: center">19701</td>
+<td style="text-align: center">19685</td>
 <td style="text-align: left">GTX 1080ti perf in an LP card, <strong>PCIe 6/8-pin power</strong>.</td>
 </tr>
 <tr>
@@ -710,7 +710,7 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: center">2025</td>
 <td style="text-align: right">8GB<br/><sup>GDDR7</sup></td>
 <td style="text-align: right">145W</td>
-<td style="text-align: center">21294</td>
+<td style="text-align: center">20837</td>
 <td style="text-align: left"><strong>PCIe 8-pin</strong>, 20% more power draw, 7% perf uplift over RTX 4060.</td>
 </tr>
 </tbody>
