--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -215,7 +215,7 @@ var figs = [
 	[ '548722', '507c3', 'good smile hatsune miku v4x 1/8 scale (2018)' ],
 	[ '187', 'c29a5', 'good smile hatsune miku 1/8 scale (2008)' ],
 	[ 'p546853', 'be182', 'bandai figure-rise bust miku model kit (2017)' ],
-	[ '1840070', '117d6', 'good smile needy girl overdose kangel nendoroid #2201 (2023)' ],
+	[ '1840070', '2ba9b', 'good smile needy girl overdose kangel nendoroid #2201 (2023)' ],
 	[ '289034', '83d4b', 'sega project diva arcade miku infinity module SPM (2015)' ],
 	[ '1370076', '897d0', 'furyu bicute bunnies miku street ver. (2022)' ],
 	[ '1210391', 'ebe3e', 'furyu bicute bunnies miku white bunny pearl ver. (2022)' ],
@@ -227,8 +227,8 @@ var figs = [
 	[ '1495055', 'eda04', 'bandai q posket miku v4x type a (2022)' ],
 	[ '1796930', '5b192', 'max limited yurayura head miku nt #76 (2023)' ],
 	[ '1796928', '82839', 'max limited yurayura head miku #75 (2023)' ],
-	[ '1473760', 'fe3fe', 'good smile inugami korone nendoroid #1861 (2022)' ],
-	[ '1473759', '90d6e', 'good smile nekomata okayu nendoroid #1860 (2022)' ],
+	[ '1473760', '0eed8', 'good smile inugami korone nendoroid #1861 (2022)' ],
+	[ '1473759', '16822', 'good smile nekomata okayu nendoroid #1860 (2022)' ],
 	[ '1782785', 'e7859', 'furyu exceed creative miku cyber future ver. (2023)' ],
 	[ '1618453', '71b24', 'good smile pop up parade needy girl overdose kangel (2023)' ],
 	[ '1780064', '90bb0', 'taito miku artist masterpiece+ birthday 2023 ver. (2023)' ],
