notes/gpus: intel arc pro b50 releases

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -635,6 +635,14 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: left">Workstation card.</td>
 </tr>
 <tr>
+<td style="text-align: left"><em>Intel Arc Pro B50</em></td>
+<td style="text-align: center">2025</td>
+<td style="text-align: right">16GB<br/><sup>GDDR6</sup></td>
+<td style="text-align: right">70W</td>
+<td style="text-align: center">17000?</td>
+<td style="text-align: left">Workstation card, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizable BAR</a></strong></td>
+</tr>
+<tr>
 <td style="text-align: left">Nvidia RTX 2000 Ada Generation</td>
 <td style="text-align: center">2024</td>
 <td style="text-align: right">16GB<br/><sup>GDDR6</sup></td>
