--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- created 2020/10/22 -->
-<!-- updated 2025/9/7 -->
+<!-- updated 2025/9/12 -->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)<span id="List-of-low-profile-GPUs-for-small-form-factor-PCs-SFFs"></span></h1>
-<p>Last updated 🌑 Sun, Sep 7th, 2025.</p>
+<p>Last updated 🌒 Fri, Sep 12th, 2025.</p>
 <p><img src="assets/low_profile_gpu.jpg" alt="img" />
 <span class="aside">We are now seeing year to year LP card uplifts after many years of stagnation and segment drought, it’s an exciting time!</span></p>
 <p>Most GPU marketing materials will use the term <strong>LP</strong> or <strong>“low profile”</strong> to refer to graphics cards that are <strong>69mm</strong>, or half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
@@ -631,15 +631,15 @@ Some lesser known brands may make changes to TDP or come with substandard VRAM, 
 <td style="text-align: center">2021</td>
 <td style="text-align: right">12GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">75W</td>
-<td style="text-align: center">13700</td>
+<td style="text-align: center">13703</td>
 <td style="text-align: left">Workstation card.</td>
 </tr>
 <tr>
-<td style="text-align: left"><em>Intel Arc Pro B50</em></td>
+<td style="text-align: left">Intel Arc Pro B50</td>
 <td style="text-align: center">2025</td>
 <td style="text-align: right">16GB<br/><sup>GDDR6</sup></td>
 <td style="text-align: right">70W</td>
-<td style="text-align: center">17000?</td>
+<td style="text-align: center">13728</td>
 <td style="text-align: left">Workstation card, <strong>Requires CPU with <a href="https://www.intel.com/content/www/us/en/support/articles/000090831/graphics.html">Resizable BAR</a></strong></td>
 </tr>
 <tr>
