--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2025/7/11 -->
+<!-- updated 2025/11/3 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌑 Fri, Jul 11th, 2025</p>
+<p>Last updated 🌑 Mon, Nov 3rd, 2025</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -194,7 +194,7 @@ var figs = [
 	[ '5737', '2e05d', 'good smile kagami hiiragi \'MikkuMiku\' lucky star OVA nendoroid #062 (2009)' ],
 	[ '59755', 'c2133', 'max factory hatsune miku append figma #100 (2011)' ],
 	[ '78582', '5dc32', 'good smile hatsune miku append nendoroid #194 (2012)' ],
-	[ '757554', '0b003', 'good smile miku cheerful ver. nendoroid #1001 (2011)' ],
+	[ '66010', '03aa7', 'good smile miku cheerful ver. nendoroid #170 (2011)' ],
 	[ '287701', 'bb9fe', 'good smile mitchie m the greatest idol miku 1/8 scale (2016)' ],
 	[ '41459', '30b7f', 'good smile miku absolute HMO edition nendoroid #129 (2011)' ],
 	[ '861021', '9c203', 'sega preciality special nuigurumi (fuwafuwa mega jumbo) miku plush (2019)' ],
