--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -222,7 +222,7 @@ var figs = [
 	[ '1419501', '49579', 'good smile racing miku 2022 nendoroid #1839 (2022)' ],
 	[ '1503807', '54464', 'good smile magical mirai 2021 miku nendoroid #1940 (2022)' ],
 	[ '1407723', 'd9878', 'taito big nuigurumi miku winter ver. (type B) (2021)' ],
-	[ '1635003', 'ea804', 'taito wonderland puss in boots miku (2023)' ],
+	[ '1635003', '6695d', 'taito wonderland puss in boots miku (2023)' ],
 	[ '36788', '5b203', 'sega kagamine len EX figure (2010)' ],
 	[ '1495055', 'eda04', 'bandai q posket miku v4x type a (2022)' ],
 	[ '1796930', '5b192', 'max limited yurayura head miku nt #76 (2023)' ],
@@ -406,7 +406,7 @@ Most, if not all air shipping options from Japan start at ¥4,000, single item s
 		</a>
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
-	— &#169; 2015-2025 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
+	— &#169; 2015-2026 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
 	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
