notes/figures: refreshed figure pic urls

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -227,8 +227,8 @@ var figs = [
 	[ '1495055', 'eda04', 'bandai q posket miku v4x type a (2022)' ],
 	[ '1796930', '5b192', 'max limited yurayura head miku nt #76 (2023)' ],
 	[ '1796928', '82839', 'max limited yurayura head miku #75 (2023)' ],
-	[ '1473760', 'd35e1', 'good smile inugami korone nendoroid #1861 (2022)' ],
-	[ '1473759', '43902', 'good smile nekomata okayu nendoroid #1860 (2022)' ],
+	[ '1473760', '1b053', 'good smile inugami korone nendoroid #1861 (2022)' ],
+	[ '1473759', 'b47b5', 'good smile nekomata okayu nendoroid #1860 (2022)' ],
 	[ '1782785', 'e7859', 'furyu exceed creative miku cyber future ver. (2023)' ],
 	[ '1618453', '71b24', 'good smile pop up parade needy girl overdose kangel (2023)' ],
 	[ '1780064', '90bb0', 'taito miku artist masterpiece+ birthday 2023 ver. (2023)' ],
